# bsuir-pdb-3

./: README.md  main.py  modified_data_49220_.rdf  pyproject.toml  requirements.txt
components/helpers/: tools.py
components/tabs/: create.py  show.py  uploader.py
tmp/: 2024-05-04 10:41:35.992434.rdf  Ethnography.rdf  bacterial_infections.rdf  catalog-v001.xml  gg.rdf  hg.rdf  modified_data(ekzemplyar)_83781_.rdf  modified_data.rdf  modified_data22_.rdf  modified_data2_.rdf  modified_data_.rdf  modified_data_23703_.rdf  modified_data_25747_.rdf  modified_data_29793_.rdf  modified_data_31303_.rdf  modified_data_37545_.rdf  modified_data_58020_.rdf  modified_data_65452_.rdf  modified_data_65985_.rdf  modified_data_87586_.rdf  new.rdf  slave_onto_final.rdf
