[tool.poetry]
name = "2 лаба"
version = "0.1.0"
description = ""
authors = ["V-outsider <voutsider@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
rdflib = "^7.0.0"
matplotlib = "^3.8.4"
networkx = "^3.3"
streamlit-agraph = "^0.0.45"
streamlit-modal = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
